Implement simple API for updating a channel's image string (not using the DB yet)
